@@ -1,9 +1,12 @@
 [run]
 branch = True
 source = z3c.etestbrowser
+plugins = coverage_python_version
 
 [report]
 precision = 2
+exclude_lines =
+    pragma: no cover
 
 [html]
 directory = htmlcov
