@@ -1,19 +1,20 @@
 # Configuration script for Travis-CI
 language: python
+dist: xenial
 python:
   - 2.7
+  - 3.6
+  - 3.7
 matrix:
   include:
-    - python: 2.7
-      name: "2.7"
-    - python: 2.7
+    - python: 3.7
       name: "Flake8"
       install:  pip install -U flake8
-      script: flake8 --doctests src setup.py
+      script: flake8 src setup.py
       after_success:
 install:
   - pip install -U pip setuptools zope.testrunner
-  - pip install -U coveralls coverage
+  - pip install -U coveralls coverage coverage-python-version
   - pip install -U -e ".[test]"
 script:
   - coverage run -m zope.testrunner --test-path=src --auto-color
