@@ -23,11 +23,24 @@ def read(*rnames):
 
 
 test_requires = [
-    'zope.testrunner',
+    'zope.annotation',
+    'zope.app.appsetup',
+    'zope.app.publication',
     'zope.app.wsgi[testlayer] >= 4.0dev',
-    'zope.app.zcmlfiles',
-    'zope.app.server',
+    'zope.authentication',
+    'zope.browserpage',
+    'zope.component',
+    'zope.container',
+    'zope.location',
+    'zope.principalregistry',
+    'zope.publisher',
+    'zope.security',
+    'zope.securitypolicy',
+    'zope.site',
     'zope.testbrowser[test]',
+    'zope.testing',
+    'zope.testrunner',
+    'zope.traversing',
 ]
 
 setup(name='z3c.etestbrowser',
@@ -48,8 +61,11 @@ setup(name='z3c.etestbrowser',
           'Environment :: Web Environment',
           'Intended Audience :: Developers',
           'License :: OSI Approved :: Zope Public License',
-          'Programming Language :: Python',
+          'Programming Language :: Python :: 2',
           'Programming Language :: Python :: 2.7',
+          'Programming Language :: Python :: 3',
+          'Programming Language :: Python :: 3.6',
+          'Programming Language :: Python :: 3.7',
           'Natural Language :: English',
           'Operating System :: OS Independent',
           'Topic :: Internet :: WWW/HTTP',
@@ -68,6 +84,7 @@ setup(name='z3c.etestbrowser',
       install_requires=[
           'lxml >= 2.2',
           'setuptools',
+          'six',
           'zope.deferredimport',
           'zope.testbrowser >= 5.0',
       ],
