@@ -2,6 +2,8 @@
 envlist =
     flake8,
     py27,
+    py36,
+    py37,
     coverage,
 
 [testenv]
@@ -10,14 +12,17 @@ commands =
     zope-testrunner --test-path=src
 
 [testenv:coverage]
-basepython = python2.7
+basepython = python3.7
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
-    coverage report --fail-under=92
-deps = coverage
+    coverage report --show-missing --fail-under=93
+    coverage html
+deps =
+    coverage
+    coverage-python-version
 
 [testenv:flake8]
-basepython = python2.7
+basepython = python3.7
 skip_install = true
 deps = flake8
 commands = flake8 src setup.py
